--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,12 +1,31 @@
-.container {
-  max-width: 500px;
+.Weather {
+  padding-bottom: 10px;
 }
-ul {
+.Weather h1 {
+  font-size: 24px;
+  font-weight: 400;
+  margin: 20px 0 0;
+  line-height: 29px;
+  color: #878787;
+}
+
+.Weather ul {
   list-style-type: none;
-}
-.description {
-  margin-left: -30px;
+  color: #878787;
+  line-height: 18px;
+  margin: 0;
+  padding: 0;
 }
 .temperature {
-  display: block;
+  color: #212121;
+  font-size: 64px;
+  line-height: 60px;
+  font-weight: 400;
+}
+img {
+  float: left;
+}
+.Weather .unit {
+  position: relative;
+  top: -32px;
 }
